--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -21,10 +21,15 @@
 @import 'components/buttons';
 @import 'components/carousel';
 @import 'components/cover';
+@import 'components/cards';
 @import 'components/dropdown';
 @import 'components/media';
 @import 'components/badge';
 @import 'components/symbols'; 
+
+@import 'pages/a-spot';
+@import 'pages/b-spot';
+@import 'pages/c-spot';
 
 @import 'themes/theme';
 @import 'themes/admin';
