--- a/style/scss/layout/_navigation.scss
+++ b/style/scss/layout/_navigation.scss
@@ -37,3 +37,8 @@ nav {
     border-top-right-radius: 0rem;
     padding-top: 1rem;
 }
+
+.navbar-expand-md .navbar-nav .nav-link {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
